added morphology and rt pages, revised body tag with global.css to maintain width properly

--- a/src/components/ModuleNav.astro
+++ b/src/components/ModuleNav.astro
@@ -25,7 +25,7 @@
     }
     .moduleNav li{
         display: inline;
-        padding: 1em;
+        padding: .6em;
     }
 
     .moduleNav a:hover{
@@ -35,7 +35,7 @@
     @media (max-width: 1100px) {
         .moduleNav{
             display: grid;
-            grid-template-columns: repeat(2, 3fr);
+            grid-template-columns: repeat(2, 2fr);
         }
 
         .moduleNav li{
