--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -26,7 +26,7 @@ showExtra = true } = Astro.props as Props;
     {showExtra && <> 
     
     <div class="showcase-img">
-      <img class="logos" src={hero} alt="Helping Middle School Improve Student Outcomes" />
+      <img class="logos" src={hero} alt="Helping Middle School Improve Student Outcomes" title="Helping Middle School Improve Student Outcomes" />
       <img class="logos-small" src={heroSmallest}  alt="Helping Middle School Improve Student Outcomes" />
       
     </div>
