--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,9 @@ const { title ='CALIReads' } = Astro.props as Props;
     <title>{title}</title>
 </head>
 <body>
+    <a href='#content' class='skipLink'>skip to content</a>
     <Header />
+    <a name='content'></a>
     <slot />
     <Footer />
 
