--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -15,7 +15,7 @@ const featuresData = [
     { 
       title: 'Morphology', 
       body: 'Morphology is the study of morphemes—the smallest units of meaning in our language.', 
-      url: '/modules#morphology'
+      url: '/morphology'
     },
     { 
       title: 'Reciprocal Teaching', 
@@ -59,7 +59,7 @@ const featuresData = [
   margin: 30px auto;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .features .container {
     grid-template-columns: 1fr;
   }
