--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@
         <div class="hamburger">
         </div>
       </div>
-     
+     <div id='skip' class='skip'><a class='skip2content' href=''></a></div>
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href='/index.html#features'>Literacy Strategies</a></li>
@@ -31,6 +31,8 @@
 
   </div>
 </header>
+<a name='content'></a>
+
 
 <style>
   /* Header */
