added vocab maps page

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -30,7 +30,7 @@ const featuresData = [
     { 
       title: 'Vocabulary Maps', 
       body: 'The Vocabulary Map is a teacher-completed, graphic organizer used to preteach unfamiliar, conceptually important words prior to reading a text. Teachers can familiarize students with essential words using the Vocabulary Map in a quick five-minute lesson. On the Vocabulary Map, the teacher identifies a cognate for the word, student-friendly definition, visual representation, synonyms, use in context, and turn and talk prompts to engage students in oral language use.', 
-      url: '/modules#vocabModules'
+      url: '/vocabulary-maps'
     }, 
     { 
       title: 'Wordbuilder', 
