edits ARG layout

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -13,14 +13,11 @@ import { Icon } from 'astro-icon';
     <Showcase showExtra={false} />
     <section class="page-content">
         <div class="container">
-          
-                <h2 >Anticipation Reaction Guides</h2>
-           
-           
+            <h2 >Anticipation Reaction Guides</h2>
+                
                 <p><strong>What:</strong> Anticipation Reaction Guides (AR Guides) are advanced organizers that are used before, during, and after reading. The teacher creates a set of opinion statements to activate student background knowledge before they read, to identify textual evidence related to the statements while they are reading, and to reconsider their opinions in the light of textual evidence after reading.</p>
-
+                
                 <p><strong>Why:</strong> AR Guides support comprehension of complex text and use of textual evidence. They have been proven to be an effective tool with middle school students across content areas and when used in classroom, intervention, and special education settings (Duffelmeyer 1994; Kozen, Murray, and Windell 2006).</p>
-               
 
                 <div class='module-launch'>
                     <a href='/modules#ARGuides' class='btn'>
@@ -28,44 +25,40 @@ import { Icon } from 'astro-icon';
                 </div>
             
             <div class='section-title'>
-            <h3 >Anticipation Reaction Guides Training Webinar</h3>
-        </div>
+                <h3 >Anticipation Reaction Guides Training Webinar</h3>
+            </div>
         
             <div class='section-desc'>     
-            <p>Dr. Deborah Reed demonstrates how to use Anticipation Reaction Guides (AR Guides) to support adolescent reading comprehension across content areas. Learn how to use these advanced graphic organizers to activate student background knowledge, support their comprehension of complex texts, and build their use of text evidence to support opinions.</p>
+                <p>Dr. Deborah Reed demonstrates how to use Anticipation Reaction Guides (AR Guides) to support adolescent reading comprehension across content areas. Learn how to use these advanced graphic organizers to activate student background knowledge, support their comprehension of complex texts, and build their use of text evidence to support opinions.</p>
           
-            <div class='outcomes'> 
-                <h4>Anticipation Reaction Guides  Participants Outcomes</h4>
-                    <ul class='arg-lists'>
-                        <li>Learn how AR Guides support reading comprehension</li>
-                        <li>Learn how to prepare effective AR Guide statements</li>
-                        <li>Learn how to instruct students in the use of AR Guides before, during and after reading a text.</li>
-                    </ul>
+              
+                    <h4>Anticipation Reaction Guides  Participants Outcomes</h4>
+                        <ul class='arg-lists'>
+                            <li>Learn how AR Guides support reading comprehension</li>
+                            <li>Learn how to prepare effective AR Guide statements</li>
+                            <li>Learn how to instruct students in the use of AR Guides before, during and after reading a text.</li>
+                        </ul>
+                    
+                <div class='webinar'>
+                    <iframe title='ARGWebinar' src="https://player.vimeo.com/video/461923212?h=9d2a0f690e"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-            <div class='webinar'>
-                <iframe title='ARGWebinar' src="https://player.vimeo.com/video/461923212?h=9d2a0f690e"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
-                </iframe>
-            </div>
-            <ul class="arg-lists">
-                <li><a href='https://www.washingtonpost.com/news/to-your-health/wp/2017/07/27/new-debate-on-antibiotics-do-you-really-need-to-take-the-full-course/' target="_blank">Antibiotics Article</a> </li>
-                <li><a href='https://www.cdc.gov/handwashing/pdf/handwashing-poster.pdf' target="_blank">Handwashing Article</a> </li>
-            </ul>
-            
+                <ul class="arg-lists">
+                     <li><a href='https://www.washingtonpost.com/news/to-your-health/wp/2017/07/27/new-debate-on-antibiotics-do-you-really-need-to-take-the-full-course/' target="_blank">Antibiotics Article</a> </li>
                 
+                     <li><a href='https://www.cdc.gov/handwashing/pdf/handwashing-poster.pdf' target="_blank">Handwashing Article</a> </li>
+                </ul>
             
-        </div>
-
-        
+          </div>
 
             <div class='section-title'>
                 <h3>Anticipation Reaction Guides Template</h3>
             </div>
             <div class='section-desc'>
-                <a href={ARGuidePDF}><img class='handout' src={ARGuideTemplate}  alt='ARG Template' title='ARG Template' ></a></div>
+                <a href={ARGuidePDF}><img class='handout' src={ARGuideTemplate}  alt='ARG Template' title='ARG Template' ></a>
             </div>
 
             <div class='section-title'>
-            <h3>DigiCoach Walkthrough</h3>
+                <h3>DigiCoach Walkthrough</h3>
             </div>
             <div class='section-desc'>
             <div class='handout'>
@@ -95,6 +88,7 @@ import { Icon } from 'astro-icon';
                 </ol>
 
             </div>
+            
     </section>
 
 </Layout>
