added wordbuilder pages and videos and content

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -35,7 +35,7 @@ const featuresData = [
     { 
       title: 'Wordbuilder', 
       body: 'The WordBuilder Intervention app a free application, is a research-based instructional tool to help adolescent struggling readers break down, build, and spell multisyllabic words. The app is designed for teacher-led, direct instruction delivered in small groups or one-on-one with struggling readers.', 
-      url: '/modules#wordbuilder'
+      url: '/wordbuilder'
     }
 
 ];
