--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -87,6 +87,7 @@ import { Icon } from 'astro-icon';
                     </li>
                 </ol>
 
+                </div>
             </div>
             
     </section>
