--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -9,12 +9,12 @@ import sgqWalkthroughimg from '../images/Self-Generated-Questions-digiCOACH-Edit
 import { Icon } from 'astro-icon';
 
 ---
-<Layout >
+<Layout title='Self-Generated Questions'>
     <Showcase  showExtra={false} />
     
     <section class="page-content">
         <div class="container">
-          <h1>Self-Generated Questions (SGQs) Strategy</h1>
+          <h2>Self-Generated Questions (SGQs) Strategy</h2>
 
           <p><strong>What:</strong> The Self-Generated Questions (SGQs) Strategy is an evidence-based routine that teaches students to monitor their reading comprehension by stopping intermittently to ask different kinds of questions about key information in the text, determine how the information is related, and use text evidence to support their responses.
             </p>
