edits to some pages

--- a/src/components/Detail.astro
+++ b/src/components/Detail.astro
@@ -20,7 +20,7 @@ const { id, open, title, src, url, dark = false } = Astro.props as Props
     <p><iframe id={id} 
         title={title} 
         src={src} 
-        width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
+        width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" ></iframe></p>
       
     </div>
   </details>
