--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -20,7 +20,7 @@ import { Icon } from 'astro-icon';
 
           <div class='wbBanner'>
             <div>
-                <h3>WordBuilder Intervention is now available FREE in the <a href='https://apple.com/' target="_blank">Apple App Store</a>, the <a href='https://play.google.com/store/apps/details?id=org.napacoe.wordbuilder' target="_blank">Google Play Store</a> & <a href='http://bit.ly/wordbuilder_int' target="_blank">The Amazon Store!</a></h3>
+                <h3>WordBuilder Intervention is now available FREE in the <a href='https://apple.com/' aria-label="Wordbuilder at Apple App Store" target="_blank">Apple App Store</a>, the <a href='https://play.google.com/store/apps/details?id=org.napacoe.wordbuilder' aria-label="Wordbuilder at Google Play Store" target="_blank">Google Play Store</a> & <a href='http://bit.ly/wordbuilder_int' aria-label="Wordbuilder at The Amazon Store" target="_blank">The Amazon Store!</a></h3>
               </div>
     
                 <div>
@@ -34,14 +34,14 @@ import { Icon } from 'astro-icon';
             <p>This three minute video overviews the WordBuilder Intervention app.</p>
             <p>The WordBuilder Intervention app a free application, is a research-based instructional tool to help adolescent struggling readers break down, build, and spell multisyllabic words. The app is designed for teacher-led, direct instruction delivered in small groups or one-on-one with struggling readers. </p>
             <div class='webinar'>
-                <iframe src="https://player.vimeo.com/video/355137327?h=28d75e3576" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe title='3minuteVideo' src="https://player.vimeo.com/video/355137327?h=28d75e3576" width="640" height="360" frameborder="0" allow="autoplay; fullscreen picture-in-picture" ></iframe>
             </div>
                 <p><center>Designed by the <a href="https://www.lainterventionproject.com/">LA Intervention Project</a> at California State University, Northridge and development supported through CALI Reads SPDG funds. Free instructional program with videos and “how to” tips available at <a href="http://www.wordbuilderapp.com/">www.wordbuilderapp.com</a></center></p>
           </div>
 
           <div class='module-launch'>
-            <a href='/modules#wordbuilder' class='btn'>
-                <h2>Go To WOrdbuilder Modules </h2>&nbsp; 
+            <a href='/modules#wordbuilder' aria-label='Wordbuilder Module' class='btn'>
+                <h2>Go To Wordbuilder Modules </h2>&nbsp; 
                 <Icon name="jam:arrow-circle-right" width='40'/>
             </a>
         </div>
@@ -52,7 +52,7 @@ import { Icon } from 'astro-icon';
             <p>Reading Coach Lindsay Young demonstrates how to use the app WordBuilder Intervention in a remote learning environment by leveraging various technologies and engagement features of Zoom, Google Platforms, and Quizlet.</p>
 
             <div class='webinar'>
-                <iframe src="https://player.vimeo.com/video/434855893?h=a08d3b3cd1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe title='Wordbuilder1' src="https://player.vimeo.com/video/434855893?h=a08d3b3cd1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" ></iframe>
 
             </div>
             <h3><a href='https://www.calireads.org/assets/Remote-WordBuilder.pptx'>Remote Learning with WordBuilder Microsoft PowerPoint <img src={ppt} alt=''>Doc 3.8mb
@@ -70,7 +70,7 @@ import { Icon } from 'astro-icon';
                 <li>Learn various technological tips and tools to support Remote Instruction.</li>
             </ul>
             <div class='webinar'>
-                <iframe src="https://player.vimeo.com/video/489906201?h=c96e032c4d" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe title='webinar' src="https://player.vimeo.com/video/489906201?h=c96e032c4d" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" ></iframe>
 
             </div>
         </div>
@@ -91,7 +91,7 @@ import { Icon } from 'astro-icon';
             <h2>WordBuilder Intervention Tool</h2>
         </div>
         <div class='section-desc'>
-            <a href={Walkthrough}><img class='handout' src={Walkthroughimg} alt=""></a>
+            <a aria-label='Wordbuilder digicoach walkthrough' href={Walkthrough}><img class='handout' src={Walkthroughimg} alt=""></a>
         </div>
 
         <div class='section-title'>
