--- a/src/pages/reciprocal-teaching.astro
+++ b/src/pages/reciprocal-teaching.astro
@@ -27,7 +27,7 @@ import RTVideo from '../components/RTVideo.astro';
                     
                     <div class='section-desc'>
                         <div class='webinar'>
-                            <iframe src="https://player.vimeo.com/video/689764777?h=c9a575f49c"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://player.vimeo.com/video/689764777?h=c9a575f49c"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" ></iframe>
                            
                         </div>
                     </div>
