--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -1,5 +1,6 @@
 ---
 import SGQWalkthrough from '/sgqresources/Self-Generated-Questions-digiCOACH-Edition.pdf';
+
 import ARGImg from '../images/gettyImages/GettyImages-121518480075.jpg';
 import ARGSmall from '../images/gettyImages/ARGSmall.jpg';
 import GTGIMg from '../images/gettyImages/GTG75.jpg';
@@ -396,132 +397,162 @@ const { title, body, url} = Astro.props as Props;
 ---
 
 <section class="ARGuides" id="ARGuides">
-  
-    <div class="container">
-        <h2>Anticipation Reaction Guides Modules</h2>
-     <div class='imgHolder'> 
-      <img class='logos' src={ARGImg} alt="">
-      <img class='logos-small' src={ARGSmall} alt="">
-    </div>
+  <div class="module-wrapper">
+    <header class="mod-header">
+      <h2>Anticipation Reaction Guides Modules</h2>
+    </header>
+    <article class="main">
       {ARGData.map(ARG => (
-        <a href={ARG.url}><h3>{ARG.title}</h3></a>
-       <p>{ARG.body} </p>
-       
-      ))}
-    
-      <div class='resources'>
-        <h3 >Additional Anticipation Reaction Guides Resources</h3>
-        <ul class=""> 
-        {ARGResources.map(ARGResource => (
-          
-      <li><a href={ARGResource.url}>{ARGResource.title}</a></li>
-        ))}
-        </ul>
-      </div>
+        <div>
+            <a href={ARG.url}><h3>{ARG.title}</h3></a>
+            <p>{ARG.body} </p>
+        </div>
+      ))}</article>
+    <aside class="aside aside-1"> 
+      <div class='imgHolder'> 
+        <img class='logos' src={ARGImg} alt="">
+        <img class='logos-small' src={ARGSmall} alt="">
     </div>
+  </aside>
+    <!--
+      <aside class="aside aside-2">Aside 2</aside>
+     -->
+    <footer class="footer">
+      <h3 >Additional Anticipation Reaction Guides Resources</h3>
+          <ul class=""> 
+            {ARGResources.map(ARGResource => (
+            
+              <li><a href={ARGResource.url}>{ARGResource.title}</a></li>
+            ))}
+          </ul>
+    </footer>
+  </div>
+    
   </section>
 
-
-
   <section class="GTG" id="GTG">
-  
-    <div class="container">
+    <div class="module-wrapper">
+      <header class="mod-header">
         <h2>Get The Gist Modules</h2>
-        <div class='imgHolder'>  
-          <img class='logos' src={GTGIMg} alt="">
-          <img class='logos-small' src={GTGsm}  alt="">
-        </div>
-        
+        </header>
+        <article class="main">
+          
       {GTGData.map(GTG => (
         <a href={GTG.url}><h3>{GTG.title}</h3></a>
        <p>{GTG.body} </p>
-       
-      ))}
-      <div class='resources'>      
-        <h3 >Additional Get The Gist Resources</h3>
-      <ul class="column-list">
-        {GTGResousrces.map(GTGResource => (
-          
-      <li><a href={GTGResource.url}>{GTGResource.title}</a></li>
-        ))}
-        </ul>
+      
+      ))} </article>
+      <aside class="main"> 
+        <div class='imgHolder'>
+          <img class='logos' src={GTGIMg} alt="">
+          <img class='logos-small' src={GTGsm} alt="">
         </div>
+     
+    </aside>
+      <!--
+        <aside class="aside aside-2">Aside 2</aside>
+       -->
+      <footer class="footer">
+        <h3 >Additional Get The Gist Resources</h3>
+            <ul class=""> 
+              {GTGResousrces.map(GTGResource => (
+              
+                <li><a href={GTGResource.url}>{GTGResource.title}</a></li>
+              ))}
+            </ul>
+      </footer>
+
     </div>
   </section>
 
 
   <section class="morphology" id="morphology">
   
-    <div class="container">
+    <div class="module-wrapper">
+      <header class='mod-header'>
         <h2>Morphology Modules</h2>
-      <div class='imgHolder'>
-        <img class='logos' src={MorphImg} alt="">
-        <img class='logos-small' src={MorphSmall} alt="">
-      </div>
+      </header>
+      <article class="main">
+       
       {MorphData.map(morph => (
         <a href={morph.url}><h3>{morph.title}</h3></a>
        <p>{morph.body} </p>
        
-      ))}
-      
-        <div class='resources'>
-          <h3>Additional Morphology Resources</h3>
-
-          <ul class="column-list">
-            {MorphResources.map(MorphResource =>(
-              <li><a href={MorphResource.url}>{MorphResource.title}</a></li>
-            ))}
-
-          </ul>
-
+      ))}</article>
+      <aside class="aside aside 1">
+        <div class='imgHolder'>
+          <img class='logos' src={MorphImg} alt="">
+          <img class='logos-small' src={MorphSmall} alt="">
         </div>
-
+      </aside>
+      
+   
+      <footer class='footer'>
+        <h3>Additional Morphology Resources</h3>
+  
+        <ul class="column-list">
+          {MorphResources.map(MorphResource =>(
+            <li><a href={MorphResource.url}>{MorphResource.title}</a></li>
+          ))}
+  
+        </ul>
+      </footer>
     </div>
+    
   </section>
 
 
   <section class="ReciprocalTeaching" id="ReciprocalTeaching">
   
-    <div class="container">
+    <div class="module-wrapper">
+      <header class='mod-header'>
         <h2>Reciprocal Teaching Modules</h2>
+      </header>
+      <aside class='aside aside-1'>
+
         <div class='imgHolder'> 
           <img class='logos' src={RecipTechImg} alt="">
           <img class='logos-small' src={RTSmall} alt="">
         </div>
+        </aside>
+        <article class="main">
       {RTData.map(rt => (
         <a href={rt.url}><h3>{rt.title}</h3></a>
        <p>{rt.body} </p>
        
-      ))}
+      ))}</article>
       
-      <div class='resources'>
+      <footer class='footer'>
         <h3>Additional Reciprocal Teaching Resources</h3>
         <ul class="column-list">
         {RTResosurces.map(rtResoource =>(
           <li><a href={rtResoource.url}>{rtResoource.title}</a></li>
         ))}
         </ul>
+      </footer>
       </div>
-    </div>
   </section>
 
 
 
 <section class="SGQmodules" id="SGQmodules">
-    <div class="container">
+    <div class="module-wrapper">
         <h2>Self-Generated Questions Modules</h2>
+<aside class='aside aside-1'>
 
-      <div class='imgHolder'>
-        <img class='logos' src={sgqImg}  alt="">
-        <img class='logos-small' src={SGQSmall}  alt="">
-      </div>
+  <div class='imgHolder'> 
+    <img class='logos' src={sgqImg} alt="">
+    <img class='logos-small' src={SGQSmall} alt="">
+  </div>
+  </aside>
+  <article class='main'>
       {sgqData.map(SGQ => (
         <a href={SGQ.url}><h3>{SGQ.title}</h3></a>
        <p>{SGQ.body} </p>
        
-      ))}
+      ))}</article>
             
-     <div class='resources'>
+     <footer class='footer'>
       <h3>Self-Generated Questions Module Resources</h3>
       <ul class="column-list">
         {sgqResources.map(sgqResource=>(
@@ -530,95 +561,143 @@ const { title, body, url} = Astro.props as Props;
         ))}
 
       </ul>
+      </footer>
      </div>
-    </div>
+    
   </section>
 
   <section class="vocabModules" id="vocabModules">
-    <div class="container">
+    <div class="module-wrapper">
+      <header class='mod-header'>        
         <h2>Vocabulary Maps Modules</h2>
+      </header>
+      <aside class='aside aside-1'>
       <div class='imgHolder'>
         <img class='logos' src={vocabImg} alt="">
         <img class='logos-small' src={vocabSmall} alt="">
       </div>
+    </aside>
+    <article class='main'>
       {vocabData.map(vocab => (
        <div class='module'> <a href={vocab.url}><h3>{vocab.title}</h3></a>
        <p>{vocab.body} </p></div>
        
-      ))}
+      ))}</article>
       
-      <div  class='resources'>
+      <footer  class='footer'>
         <h3 >Additional Vocabulary Maps Resources</h3>
         <ul >
           {vocabResources.map(vocabResource=>(
             <li><a href={vocabResource.url}>{vocabResource.title}</a></li>
           ))}
         </ul>
+        </footer>
       </div>
-
-    </div>
   </section>
 
   <section class="wordbuilder" id="wordbuilder">
   
-    <div class="container">
+    <div class="module-wrapper">
+      <header class='mod-header'>
         <h2>Wordbuilder Modules</h2>
+      </header>
+      <aside class='aside aside-1'>
         <div class="imgHolder">
           <img class='logos' src={WBImg} alt="">
           <img class='logos-small' src={WBSmall} alt="">
         </div>
+      </aside>
+      <aside  class='aside aside-2'>
+        <h3>Additonal Wordbuilder Resources</h3>
+        <ul class="column-list">
+         {wbResources.map(wbResource =>(
+           <li><a href={wbResource.url}>{wbResource.title}</a></li>
+ 
+         ))}
+        </ul>
+      </aside>
+      <article class='main'>
       {wbData.map(wordbuilder => (
         <a href={wordbuilder.url}><h3>{wordbuilder.title}</h3></a>
        <p>{wordbuilder.body} </p>
        
-      ))}
+      ))}</article>
       
-      <div class='resources'>
-      <h3>Additonal Wordbuilder Resources</h3>
-       <ul class="column-list">
-        {wbResources.map(wbResource =>(
-          <li><a href={wbResource.url}>{wbResource.title}</a></li>
-
-        ))}
-       </ul>
+      
+      
     </div>
 
-    
-    </div>
   </section>
-
-  
-
-
-
   <style>
-    
-    .container { color: var(--color-secondary);
- }
-
-    .container h3{opacity: 50;}
-
-    .container a {color: var(--color-secondary);
-        text-decoration: underline;
-
-    }
-    
-    .container a:hover{
-        color: #0C7D9E;
-    }
-
-    .resources{
-      border: 1px solid var(--color-secondary);
-    
-      padding: 1em;
-    }
-
+   
     .column-list a{
     }
 
     .column-list {
   columns: 400px;
 }
+.column-list li a:link{
+  width:100%;
+  justify-content: baseline;
+  font-size: smaller;
+  text-decoration: underline;
+}
+
+
+
+.module-wrapper {
+  
+  display: flex;  
+  flex-flow: row wrap;
+  font-weight: bold;
+  text-align: center; 
+}
+
+.module-wrapper > * {
+  padding: 10px;
+  flex: 1 100%;
+}
+
+.mod-header {
+/*
+  background: tomato;
+*/
+}
+
+.footer {
+  background: #fff;
+}
+
+.main {
+  text-align: left;
+}
+
+.aside-1 {
+}
+
+.aside-2 {
+  background: var(--color-accent-secondary);
+  text-align: left;
+}
+
+
+@media all and (min-width: 600px) {
+  .aside { flex: 1 0 0; }
+}
+
+@media all and (min-width: 800px) {
+  .main    { flex: 3 0px; }
+  .aside-1 { order: 1; } 
+  .main    { order: 2; }
+  .aside-2 { order: 3; }
+  .footer  { order: 4; }
+}
+
+body {
+  padding: 2em; 
+}
+
+
   </style>
       
       
