file name error

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -12,7 +12,7 @@ import RecipTechImg from '../images/reciprocalTeaching.png';
 import RTSmall from '../images/gettyImages/reciprocalTeachingSmall.jpg';
 import sgqImg from '../images/gettyImages/sgq-overview.jpg';
 import SGQSmall from '../images/gettyImages/sgq-overview-small.jpg';
-import vocabImg from '../images/vocabMaps_500.png';
+import vocabImg from '../images/VocabMaps_500.png';
 import vocabSmall from '../images/gettyImages/vocabImgSmall.jpg';
 import WBImg from '../images/wordBuilder_500.png';
 import WBSmall from '../images/gettyImages/wordBuilder-small.jpg';
