--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -5,8 +5,8 @@ import WBVideo from '../components/WBVideo.astro';
 import wbBanner from '../images/wordbuilderApp1.png';
 import ppt from '../images/PPT.png';
 
-//import Walkthrough from '../pdfs/CALI-Reads-WordBuilder.pdf';
-//import Walkthroughimg from '../images/CALI-Reads-WB_Walkthrough.jpg';
+import Walkthrough from '../pdfs/CALI-Reads-WordBuilder.pdf';
+import Walkthroughimg from '../images/CALI-Reads-WB_Walkthrough.jpg';
 
 import { Icon } from 'astro-icon';
 
@@ -90,11 +90,9 @@ import { Icon } from 'astro-icon';
         <div class='section-title'>
             <h2>WordBuilder Intervention Tool</h2>
         </div>
-       <!--
-         <div class='section-desc'>
+        <div class='section-desc'>
             <a aria-label='Wordbuilder digicoach walkthrough' href={Walkthrough}><img class='handout' src={Walkthroughimg} alt=""></a>
         </div>
-        -->
 
         <div class='section-title'>
             <h2>WordBuilder Word Part Cards</h2>
