edits to WB walkthrough

--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -91,7 +91,8 @@ import { Icon } from 'astro-icon';
             <h2>WordBuilder Intervention Tool</h2>
         </div>
         <div class='section-desc'>
-            <a aria-label='Wordbuilder digicoach walkthrough' href={Walkthrough}><img class='handout' src={Walkthroughimg} alt=""></a>
+            <a aria-label='Wordbuilder digicoach walkthrough' href={Walkthrough}>
+                <img class='handout' src={Walkthroughimg} alt=""></a>
         </div>
 
         <div class='section-title'>
