edits to WB Walkthrough file path

--- a/src/pages/wordbuilder.astro
+++ b/src/pages/wordbuilder.astro
@@ -5,7 +5,7 @@ import WBVideo from '../components/WBVideo.astro';
 import wbBanner from '../images/wordbuilderApp1.png';
 import ppt from '../images/PPT.png';
 
-import Walkthrough from '../pdfs/CALI-Reads-WordBuilder.pdf';
+import Walkthrough from '/pdfs/CALI-Reads-WordBuilder.pdf';
 import Walkthroughimg from '../images/CALI-Reads-WB_Walkthrough.jpg';
 
 import { Icon } from 'astro-icon';
