module naming tweaks, removed bg colors from each section

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -77,7 +77,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
     </div>
   </aside>
     <footer class="footer">
-      <h3 >Additional Anticipation Reaction Guides Resources</h3>
+      <h3 >Anticipation Reaction Guides Module Resources</h3>
           <ul class="column-list"> 
             {ARGResources.map(ARGResource => (
             
@@ -110,7 +110,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
     </aside>
 
     <footer class="footer">
-        <h3 >Additional Get The Gist Resources</h3>
+        <h3 >Get The Gist Module Resources</h3>
             <ul class="column-list"> 
               {GTGResources.map(GTGResource => (
                 <li><a href={GTGResource.url}>{GTGResource.title}</a></li>
@@ -138,7 +138,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
         </div>
       </aside>
     <footer class='footer'>
-        <h3>Additional Morphology Resources</h3>
+        <h3> Morphology Module Resources</h3>
         <ul class="column-list">
           {MorphResources.map(MorphResource =>(
             <li><a href={MorphResource.url}>{MorphResource.title}</a></li>
@@ -167,7 +167,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
           ))}
         </article>
       <footer class='footer'>
-        <h3>Additional Reciprocal Teaching Resources</h3>
+        <h3>Reciprocal Teaching Module Resources</h3>
         <div class="tabs">
     
           <div class="tab">
@@ -288,7 +288,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
       </article>
       
       <footer  class='footer'>
-        <h3 >Additional Vocabulary Maps Resources</h3>
+        <h3 >Vocabulary Maps Module Resources</h3>
         <ul class="column-list">
           {vocabResources.map(vocabResource=>(
             <li><a href={vocabResource.url}>{vocabResource.title}</a></li>
@@ -330,7 +330,7 @@ import wbResources from '../data/WordBuilderResourceData.json';
         ))}
       </article>
      <footer class='footer'>
-      <h3>Additional Wordbuilder Resources</h3>
+      <h3>Wordbuilder Module Resources</h3>
         <ul class="column-list">
             {wbResources.map(wbResource =>(
               <li><a href={wbResource.url}>{wbResource.title}</a></li>
